adjusted our-work image styles to cover space to avoid stretching and squishing

--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -69,6 +69,7 @@
     height: 42vw;
     width: 42vw;
     margin: 10px 0;
+    object-fit: cover;
 }
 
 .portfolio-quote {
